--- a/.gitignore
+++ b/.gitignore
@@ -1,26 +1,9 @@
-*.json
-pcs
-ckpts
-*.h5
-run.sh
-lock
+psr
+blender
+*.ini
 *.d
 *.o
 *ninja*
-.vscode
-wandb
-logs
-lightning_logs
-data
-out
-*.ipynb
-*.swp
-deps/
-tmp/
-blender*
-uv_grids/
-*.ini
-activate.sh
 
 .vscode
 # Byte-compiled / optimized / DLL files
@@ -183,3 +166,12 @@ cython_debug/
 #  and can be added to the global gitignore or merged into this file.  For a more nuclear
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
+blender-*
+
+# Ignore everything in /data and /log
+/data/*
+/logs/*
+
+# But keep the .gitkeep file so the folder is tracked
+!/data/.gitkeep
+!/logs/.gitkeep
